# year_2

./: README.md
q1/ai_techniques_cs4375/: reading.txt
q1/big_data_cse2520/assignments/assignment_1/: pom.xml
q1/complex_analysis_ee2m11/: notes.txt  week01.txt  week02.txt  week03.txt  week04.txt
q1/computer_graphics_cse2215/assignments/assignment1/: CMakeLists.txt
q1/computer_graphics_cse2215/assignments/assignment2/: CMakeLists.txt  assignment.html
q1/computer_graphics_cse2215/assignments/assignment2/framework/: CMakeLists.txt
q1/computer_graphics_cse2215/assignments/assignment2/framework/include/framework/: config.h
q1/computer_graphics_cse2215/assignments/assignment2/framework/src/: config.cpp
q1/computer_graphics_cse2215/assignments/assignment2/robot_arm/src/: main.cpp  your_code_here.h
q1/computer_graphics_cse2215/assignments/assignment2/solar_system/src/: your_code_here.h
q1/computer_graphics_cse2215/assignments/assignment3/: CMakeLists.txt  assignment.html
q1/linalg_diff_eq_tn2244wi/: diff_eq_tn2244wi_werkschema.txt
q1/machine_learning_cse2510/: week01.txt
q1/machine_learning_cse2510/exercises/week01/: intro1-python.ipynb
q1/machine_learning_cse2510/exercises/week02/: parametric_classifiers_student.ipynb
q1/machine_learning_cse2510/exercises/week03/: nonparametric_classifiers_student.ipynb
q1/partial_diff_eq_wi3150tu/: course_description.txt
q1/real_analysis_am2090/: week01.txt  week02.txt
q1/real_analysis_am2090/exercises/: small2e.dvi  week01.dvi  week01.tex
q1/stats_am2080/: mandatory_3.R  week01.txt
(+41 files in other folders)
